examples/errors/parsing/state-missing-bracket.cn
main : () [impure] =
  let p = New int 0;
  ()
